--- a/back/packages.tex
+++ b/back/packages.tex
@@ -1,7 +1,7 @@
 % Author: Mark Luo
 % Version: 220401-1.0
 \usepackage[T1]{fontenc}
-\usepackage[latin1]{inputenc}
+%\usepackage[latin1]{inputenc}% I annotated this because it may cause citation error
 \usepackage[english]{babel}
 %\usepackage{siunitx}% (SI) units package, currently not installed
 \usepackage{graphicx}% for youtube image link
